<resources>
    <string name="app_name">Inventory App</string>
    <string name="product_Detail">Product Detail</string>
    <string name="story">Story: </string>
    <string name="increase">+</string>
    <string name="update_product">Update</string>
    <string name="order_product">Order</string>
    <string name="decrease">-</string>
    <string name="delete">Delete</string>
    <string name="add_product">add</string>
    <string name="product_name">Name: </string>
    <string name="product_price">Price: </string>
    <string name="product_story">Story: </string>
    <string name="product_quantity">Quantity: </string>
    <string name="sale">Sale</string>

    <string name="error_add_product">Error with saving product </string>
    <string name="success_add_product">Product saved with row id: </string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="insert_product_failed">Error with saving product</string>
    <string name="update_product_failed">Error with updating product</string>
    <string name="delete_product_failed">Error with deleting product</string>
    <string name="insert_product_successful">Product saved!</string>
    <string name="update_product_successful">Product updated!</string>
    <string name="delete_product_successful">Product deleted!</string>
</resources>
