<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nanoddegree.inventoryapp.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_view_margin"
                    android:padding="@dimen/text_view_padding"
                    android:text="@string/product_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_view_margin"
                    android:padding="@dimen/text_view_padding"
                    android:text="@string/product_quantity"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_view_margin"
                    android:padding="@dimen/text_view_padding"
                    android:text="@string/product_price"/>

                <Button
                    android:id="@+id/increase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/increase"/>

                <Button
                    android:id="@+id/update_product_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_product"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_product_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/product_name"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/edit_product_quantity_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/product_quantity"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/edit_product_price_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/product_price"
                    android:inputType="textPersonName"/>

                <Button
                    android:id="@+id/decrease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/decrease"/>

                <Button
                    android:id="@+id/delete_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/order_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_product"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
